// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackHeader renders correctly with showBackButton set to false 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 42,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "600",
        },
        Object {
          "left": 40,
          "position": "absolute",
          "right": 40,
          "textAlign": "center",
          "top": 36,
        },
      ]
    }
  />
</View>
`;

exports[`BackHeader renders correctly with showBackButton set to true 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "height": 42,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "left": 10,
        "opacity": 1,
        "position": "absolute",
        "top": 36,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#000000",
              "fontSize": 20,
              "paddingRight": 10,
            },
            undefined,
          ],
          Object {
            "fontFamily": "Entypo",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "black",
          "fontFamily": "System",
          "fontSize": 17,
          "fontWeight": "600",
        },
        Object {
          "left": 40,
          "position": "absolute",
          "right": 40,
          "textAlign": "center",
          "top": 36,
        },
      ]
    }
  />
</View>
`;
